--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DEBUG=1
-SECRET_KEY=secret_key
+DEBUG=0
+SECRET_KEY=django-insecure-d_^vir(kwnva(n1(t^ha@8e%0ncd((_18bo$1&1&2+dawj*t=@
 DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
 SQL_ENGINE=django.db.backends.postgresql
 SQL_DATABASE=pg
